--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Random Quote Generator</h1>
+    <!-- <h1>Random Quote Generator</h1> -->
     <p id="quote"></p>
-    <button onclick="generateQuote()">Click</button>
-
+    <button onclick="generateQuote()">Click Generate</button>
     <script src="index.js"></script>
 </body>
 </html>
